@@ -1,0 +1,6 @@
+/* { dg-do run } */
+
+type Foo = struct { if (0) int data; };
+
+/* { dg-command { format ("%v", Foo {} ) } } */
+/* { dg-output "Foo \{\}" } */
