@@ -1,0 +1,7 @@
+/* { dg-do run } */
+/* { dg-data {c*} {0x10 0x20 0x30 0x40  0x50 0x60 0x70 0x80   0x90 0xa0 0xb0 0xc0} } */
+
+type Foo = struct { if (0) int data; };
+
+/* { dg-command { format ("%v", Foo @ 0#B) } } */
+/* { dg-output "Foo \{\}" } */
