@@ -1,0 +1,6 @@
+/* { dg-do run } */
+
+type Foo = struct { int a; int b if 0; };
+
+/* { dg-command { format ("%v", Foo {}) } } */
+/* { dg-output "Foo \{a=0\}" } */
