@@ -1,0 +1,6 @@
+/* { dg-do run } */
+
+type Foo = struct { int a; if (0) int b; };
+
+/* { dg-command { format ("%v", Foo {}) } } */
+/* { dg-output "Foo \{a=0\}" } */
