@@ -1,0 +1,9 @@
+/* { dg-do run } */
+/* { dg-data {c*} {0x10 0x20 0x30 0x40  0x50 0x60 0x70 0x80   0x90 0xa0 0xb0 0xc0} } */
+
+type Foo = struct { int a; if (a != 0) offset<int<32>,B> b; };
+
+/* { dg-command { .set obase 16 } } */
+/* { dg-command { .set endian big } } */
+/* { dg-command { format ("%v", Foo @ 0#B) } } */
+/* { dg-output "Foo \{a=0x10203040,b=0x50607080#B\}" } */
